discussion/kv_engine/140922/140922_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: MB-42795: Switch magma memory accounting to use memory guards

Change-Id: Ia17996352f0a97c54bb06f06bd81a491d124577b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-11-25 02:25:32.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-25 02:44:50.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32053/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(510): error C2039: "ArenaClient": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32053/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27652/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:510:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27652/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5857/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:510:32: error: no member named "ArenaClient" in "magma::Magma::Config" [clang-diagnostic-error]
        configuration.magmaCfg.ArenaClient =
                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5857/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:510:32:
error: no member named "ArenaClient" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5857/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6369/ : FAILURE

Compile error at [2020-11-25T02:27:28.536Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:510:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6369/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7408/ : FAILURE

Compile error at [2020-11-25T02:26:52.252Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:510:32:
error: ?struct magma::Magma::Config? has no member named ?ArenaClient?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7408/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15223/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7668/ : FAILURE

Compile error at [2020-11-25T02:27:41.846Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:510:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7668/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4391/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7294/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
